--- a/chatbot.html
+++ b/chatbot.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>AgroNurture Chatbot</title>
-  <link rel="stylesheet" href="styles3.css">
+
+  <!-- n8n Chat CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/@n8n/chat/dist/style.css" rel="stylesheet" />
+
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -36,45 +39,29 @@
       color: black;
     }
     .container {
-      max-width: 800px;
-      margin: 30px auto;
-      background: white;
-      padding: 20px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: calc(100vh - 130px); /* Adjusting for header & footer */
+      text-align: center;
     }
     h2 {
       color: #2d882d;
     }
-    .chat-window {
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
+
+    /* ✅ Chat widget fullscreen in center */
+    #n8n-chat-widget {
+      width: 80%;
+      height: 80%;
+      max-width: 900px;
+      max-height: 700px;
+      border: 2px solid #2d882d;
+      border-radius: 10px;
+      overflow: hidden;
+      display: block; /* Always visible */
     }
-    .chat-output {
-      border: 1px solid #ccc;
-      height: 300px;
-      overflow-y: auto;
-      padding: 10px;
-      background: #f9f9f9;
-    }
-    input[type="text"] {
-      padding: 10px;
-      font-size: 16px;
-      width: calc(100% - 80px);
-      border-radius: 5px;
-      border: 1px solid #ccc;
-    }
-    button {
-      padding: 10px 20px;
-      background-color: #2d882d;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    .message {
-      margin: 5px 0;
-    }
+
     #google_translate_element {
       position: absolute;
       top: 10px;
@@ -95,7 +82,6 @@
   <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </head>
 <body>
-
 <header>
   <div id="google_translate_element"></div>
   <h1>AgroNurture - Chatbot</h1>
@@ -104,59 +90,26 @@
 
 <div class="container">
   <h2>AgroNurture Chatbot</h2>
-  <div class="chat-window">
-    <div class="chat-output" id="chat-output"></div>
-    <div style="display: flex;">
-      <input type="text" id="user-input" placeholder="Type your message..." />
-      <button id="send-btn">Send</button>
-    </div>
-  </div>
+  
+  <p>Ask me anything about crops, soil, fertilizers, and sustainable farming!</p>
+
+  <!-- ✅ n8n Chat Widget -->
+  <div id="n8n-chat-widget"></div>
+  <script type="module">
+  import { createChat } from 'https://cdn.jsdelivr.net/npm/@n8n/chat/dist/chat.bundle.es.js';
+  createChat({
+    webhookUrl: 'http://localhost:5678/webhook/259a8750-71d0-437d-a968-4383c66aacd6/chat',
+    target: '#n8n-chat-widget',
+    mode: 'embedded' // ✅ Ensures it stays open, not popup
+  });
+</script>
 </div>
+
+<!-- ✅ n8n Chat Embed Script -->
+
 
 <footer>
   <p>&copy; 2024 AgroNurture. All Rights Reserved.</p>
 </footer>
-
-<script>
-  const chatOutput = document.getElementById('chat-output');
-  const userInput = document.getElementById('user-input');
-  const sendBtn = document.getElementById('send-btn');
-
-  sendBtn.addEventListener('click', function () {
-    const message = userInput.value;
-    if (message.trim()) {
-      addMessageToChat('User', message);
-      getChatbotResponse(message);
-      userInput.value = '';
-    }
-  });
-
-  function addMessageToChat(sender, message) {
-    const messageElement = document.createElement('div');
-    messageElement.className = 'message';
-    messageElement.innerHTML = `<strong>${sender}:</strong> ${message}`;
-    chatOutput.appendChild(messageElement);
-    chatOutput.scrollTop = chatOutput.scrollHeight;
-  }
-
-  function getChatbotResponse(message) {
-    const responses = {
-      "hi": "Hello! How can I assist you today?",
-      "hello": "Hi there! How can I help you?",
-      "how are you?": "I'm a chatbot, but I'm here to help you with anything you need!",
-      "help": "Sure! I can assist you with crop recommendations, soil health advice, or any farming-related queries.",
-      "fertilizer": "I recommend using nitrogen-rich fertilizers for crops like wheat or maize. What crops are you growing?",
-      "soil": "You can analyze your soil by checking its pH level and nutrient content. How can I assist with your soil?"
-    };
-
-    const defaultResponse = "I'm not sure how to respond to that. Could you please rephrase your question?";
-    const response = responses[message.toLowerCase()] || defaultResponse;
-
-    setTimeout(() => {
-      addMessageToChat('Bot', response);
-    }, 500);
-  }
-</script>
-
 </body>
 </html>
